--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e9cefb75-aa26-4404-8ba3-722858af32d3"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
